# Number-recogniser

./: .gitignore  README.md  Train.ipynb  model.py  pyproject.toml
drawing_canvas/: main.py
number_recogniser/: model.py
