[tool.pdm]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
[project]
name = "number_recogniser"
description = "AI model that recognises numbers"
authors = [
    {name = "MaciejSobstel"},
]
version = "0.1.0rc0"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn"
]
readme = "README.md"
keywords = ["fst", "itn", "text normalization", "polish"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Polish",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing"
]
[project.urls]
Repository = "https://github.com/MaciejSobstel/Number-recogniser"

[project.scripts]
number_recogniser = "number_recogniser.model:prediction"

[tool.pdm.build]
excludes = ["./**/.git"]
includes = ["number_recogniser"]
source-includes = ["README.md"]
editable-backend = "path"

[tool.pdm.dev-dependencies]
training = ["jupyter", "pandas"]

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.ruff]
line-length = 120
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
extend-exclude = ["tests/fixtures"]
target-version = "py37"
mccabe.max-complexity = 10
isort.known-first-party = ["pdm"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]
markers = [
    "network: Tests that require network",
    "integration: Run with all Python versions",
    "path: Tests that compare with the system paths",
    "deprecated: Tests about deprecated features",
]
addopts = "-r aR"
testpaths = [
    "tests/",
]