[tool.pdm]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
[project]
name = "number_recogniser"
description = "AI model that recognises numbers"
authors = [
    {name = "MaciejSobstel"},
]
version = "0.1.0rc0"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn"
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/MaciejSobstel/Number-recogniser"

[project.scripts]
number_recogniser = "number_recogniser.model:prediction"

[tool.pdm.build]
excludes = ["./**/.git"]
includes = ["number_recogniser"]
source-includes = ["README.md"]
editable-backend = "path"

[tool.pdm.dev-dependencies]
training = ["jupyter", "pandas"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"